# aegir-bot

./: .envrc  .gitignore  Cargo.toml  default.nomad  flake.nix
.github/workflows/: registry.yaml  stream.sh
src/: danbooru.rs  discord.rs  env.rs  main.rs
